# kestrel

./: .gitignore  CLAUDE.md  Functions.py  KESTREL.yml  KESTREL_2COLOURS.yml  KESTREL_LOG.yml  KESTREL_SINGLE_RV.yml  KEZTREL.yml  README.md  Third Pass.ipynb  dustbi_calibration.py  dustbi_nn.py  dustbi_plotting.py  dustbi_simulator.py  launcher.job  posterior_Callaghan.pt  pyproject.toml  req.txt  requirements.txt  run.py  run_nre.py  run_nre_working.py  run_sims.py
config_files/: KESTREL.yml  KESTREL_2COLOURS.yml  KESTREL_LOG.yml
scripts/: launcher.job  run_nre.py  run_sims.py
src/kestrel/: Functions.py  __init__.py  dustbi_nn.py  dustbi_plotting.py  dustbi_simulator.py
