[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kestrel"
version = "0.1.0"
description = "SBI framework for Type Ia supernova dust population inference"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "sbi>=0.25.0",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "astropy>=7.2.0",
    "pandas>=3.0.1",
    "h5py>=3.15.1",
    "tqdm>=4.67.3",
    "pyyaml>=6.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
